# service_droid

./: .dockerignore  .env.example  .gitignore  .start.sh  CLAUDE.md  Dockerfile  README.md  bot.py  compose.dev.yml  compose.yml  main.py  requirements.txt  settings.json  start.sh
backend/: logging_setup.py  main.py  pyproject.toml
backend/classes/: __init__.py  bot.py  command_listing.py  context.py  galatron.py  galatron_leaderboard_view.py  guild.py  lfg.py  log_view.py  minecraft.py  options.py  reload.py  settings.py  trivia.py  trivia_scheduler.py
backend/classes/base/: guildbase.py
backend/cogs/: dev.py  events.py  galatron_commands.py  galatron_settings.py  lfg_commands.py  lfg_settings.py  logging_cog.py  minecraft.py  startup.py  trivia.py  trivia_settings.py
backend/converters/: __init__.py
backend/ios/: json.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_trivia_channel_list_fk.py  0003_minecraft_status_channel.py
backend/scripts/: migrate_json_to_pg.py
backend/store/: __init__.py  engine.py  models.py  notify.py  repositories.py  state.py
classes/: __init__.py  bot.py  context.py  galatron.py  galatron_leaderboard_view.py  galatron_stats_view.py  guild.py  lfg.py  log_view.py  settings.py  trivia.py  trivia_modes.py  trivia_scheduler.py  trivia_views.py
cogs/: custom.py  dev.py  events.py  galatron_commands.py  galatron_settings.py  lfg_commands.py  lfg_settings.py  settings.py  startup.py  trivia.py  trivia_settings.py
converters/: __init__.py  color.py  links.py  time.py
ios/: json.py
(+17 files in other folders)
