[project]
name = "service-droid"
version = "0.1.0"
description = "service_droid — py-cord Discord bot (LFG, Trivia, Galatron)."
requires-python = ">=3.14"
dependencies = [
    "py-cord>=2.8.0",
    "croniter>=6.2.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100
